--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "url": "https://github.com/hubot-scripts/hubot-retty/issues"
   },
   "dependencies": {
-    "cheerio": "^0.19.0",
-    "request": "^2.58.0"
+    "cheerio-httpcli": "^0.3.2"
   },
   "peerDependencies": {
     "hubot": "2.x"
